{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "31ed1f4c-76f9-4fed-bbba-5946d3102e34",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5df9b43b-1fd6-4768-8384-150fb6c1cb6b",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b93e5d01-12de-4598-a343-8772e6a236f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "628866a5-bc9d-48c8-a0df-bcd7b8d49b41",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "364c7e83-4469-458a-a80e-e257f616db23",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}